--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -1,65 +1,61 @@
 <div class="layui-layout layui-layout-admin">
-  <div class="layui-header">
-    <!-- 头部区域 -->
-    <ul class="layui-nav layui-layout-left">
-      <li class="layui-nav-item layadmin-flexible" lay-unselect>
-        <a href="javascript:;" layadmin-event="flexible" title="侧边伸缩">
-          <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
-        </a>
-      </li>
-      <!--<li class="layui-nav-item layui-this layui-hide-xs layui-hide-sm layui-show-md-inline-block">
-        <a lay-href="" title="">
-          控制台
-        </a>
-      </li>-->
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <a href="http://www.layui.com/admin/" target="_blank" title="前台">
-          <i class="layui-icon layui-icon-website"></i>
-        </a>
-      </li>
-      <li class="layui-nav-item" lay-unselect>
-        <a href="javascript:;" layadmin-event="refresh" title="刷新">
-          <i class="layui-icon layui-icon-refresh-3"></i>
-        </a>
-      </li>
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <input type="text" placeholder="搜索..." autocomplete="off" class="layui-input layui-input-search" layadmin-event="serach" lay-action="template/search/keywords="> 
-      </li>
-    </ul>
-    <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
-      
-      <li class="layui-nav-item" lay-unselect>
-        <a lay-href="app/message/" layadmin-event="message">
-          <i class="layui-icon layui-icon-notice"></i>
-          
-          <!-- 如果有新消息，则显示小圆点 -->
-          <script type="text/html" template lay-url="./json/message/new.js">
-          {{# if(d.data.newmsg){ }} 
-            <span class="layui-badge-dot"></span>
-          {{# } }}
-          </script>
-          
-        </a>
-      </li>
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <a href="javascript:;" layadmin-event="theme">
-          <i class="layui-icon layui-icon-theme"></i>
-        </a>
-      </li>
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <a href="javascript:;" layadmin-event="note">
-          <i class="layui-icon layui-icon-note"></i>
-        </a>
-      </li>
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <a href="javascript:;" layadmin-event="fullscreen">
-          <i class="layui-icon layui-icon-screen-full"></i>
-        </a>
-      </li>
-      <li class="layui-nav-item" lay-unselect>
-        <script type="text/html" template lay-url="./json/user/session.js" 
-        lay-done="layui.element.render('nav', 'layadmin-layout-right');">
-          <a href="javascript:;">
+	<div class="layui-header">
+		<!-- 头部区域 -->
+		<ul class="layui-nav layui-layout-left">
+			<li class="layui-nav-item layadmin-flexible" lay-unselect>
+				<a href="javascript:;" layadmin-event="flexible" title="侧边伸缩">
+					<i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
+				</a>
+			</li>
+			<!--<li class="layui-nav-item layui-this layui-hide-xs layui-hide-sm layui-show-md-inline-block">
+				<a lay-href="" title="">控制台</a>
+			</li>-->
+			<li class="layui-nav-item layui-hide-xs" lay-unselect>
+				<a href="http://www.layui.com/admin/" target="_blank" title="前台">
+					<i class="layui-icon layui-icon-website"></i>
+				</a>
+			</li>
+			<li class="layui-nav-item" lay-unselect>
+				<a href="javascript:;" layadmin-event="refresh" title="刷新">
+					<i class="layui-icon layui-icon-refresh-3"></i>
+				</a>
+			</li>
+			<li class="layui-nav-item layui-hide-xs" lay-unselect>
+				<input type="text" placeholder="搜索..." autocomplete="off" class="layui-input layui-input-search" layadmin-event="serach"
+				 lay-action="template/search/keywords=">
+			</li>
+		</ul>
+		<ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
+
+			<li class="layui-nav-item" lay-unselect>
+				<a lay-href="app/message/" layadmin-event="message">
+					<i class="layui-icon layui-icon-notice"></i>
+					<!-- 如果有新消息，则显示小圆点 -->
+					<script type="text/html" template lay-url="./json/message/new.js">
+						{{# if(d.data.newmsg){ }} 
+						<span class="layui-badge-dot"></span>
+						{{# } }}
+					</script>
+				</a>
+			</li>
+			<li class="layui-nav-item layui-hide-xs" lay-unselect>
+				<a href="javascript:;" layadmin-event="theme">
+					<i class="layui-icon layui-icon-theme"></i>
+				</a>
+			</li>
+			<li class="layui-nav-item layui-hide-xs" lay-unselect>
+				<a href="javascript:;" layadmin-event="note">
+					<i class="layui-icon layui-icon-note"></i>
+				</a>
+			</li>
+			<li class="layui-nav-item layui-hide-xs" lay-unselect>
+				<a href="javascript:;" layadmin-event="fullscreen">
+					<i class="layui-icon layui-icon-screen-full"></i>
+				</a>
+			</li>
+			<li class="layui-nav-item" lay-unselect>
+				<script type="text/html" template lay-url="./json/user/session.js" lay-done="layui.element.render('nav', 'layadmin-layout-right');">
+					<a href="javascript:;">
             <cite>{{ d.data.username }}</cite>
           </a>
           <dl class="layui-nav-child">
@@ -69,25 +65,25 @@
             <dd layadmin-event="logout" style="text-align: center;"><a>退出</a></dd>
           </dl>
         </script>
-      </li>
-      
-      <li class="layui-nav-item layui-hide-xs" lay-unselect>
-        <a href="javascript:;" layadmin-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a>
-      </li>
-      <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect>
-        <a href="javascript:;" layadmin-event="more"><i class="layui-icon layui-icon-more-vertical"></i></a>
-      </li>
-    </ul>
-  </div>
-  
-  <!-- 侧边菜单 -->
-  <div class="layui-side layui-side-menu">
-    <div class="layui-side-scroll">
-      <script type="text/html" template lay-url="./json/menu.js?v={{ layui.admin.v }}" 
-      lay-done="layui.element.render('nav', 'layadmin-system-side-menu');" id="TPL_layout">
-      
-        <div class="layui-logo" lay-href="">
-          <span>{{ layui.setter.name || 'layuiAdmin' }}</span>
+			</li>
+
+			<li class="layui-nav-item layui-hide-xs" lay-unselect>
+				<a href="javascript:;" layadmin-event="about"><i class="layui-icon layui-icon-more-vertical"></i></a>
+			</li>
+			<li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect>
+				<a href="javascript:;" layadmin-event="more"><i class="layui-icon layui-icon-more-vertical"></i></a>
+			</li>
+		</ul>
+	</div>
+
+	<!-- 侧边菜单 -->
+	<div class="layui-side layui-side-menu">
+		<div class="layui-side-scroll">
+			<script type="text/html" template lay-url="" lay-done="layui.element.render('nav', 'layadmin-system-side-menu');"
+			 id="TPL_layout">
+
+			<div class="layui-logo" lay-href="">
+			<span>{{ layui.setter.name || 'layuiAdmin' }}</span>
         </div>
         
         <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
@@ -156,13 +152,13 @@
         {{# }); }}
         </ul>
       </script>
-    </div>
-  </div>
-  
+		</div>
+	</div>
 
-  <!-- 页面标签 -->
-  <script type="text/html" template lay-done="layui.element.render('nav', 'layadmin-pagetabs-nav')">
-    {{# if(layui.setter.pageTabs){ }}
+
+	<!-- 页面标签 -->
+	<script type="text/html" template lay-done="layui.element.render('nav', 'layadmin-pagetabs-nav')">
+		{{# if(layui.setter.pageTabs){ }}
     <div class="layadmin-pagetabs" id="LAY_app_tabs">
       <div class="layui-icon layadmin-tabs-control layui-icon-prev" layadmin-event="leftPage"></div>
       <div class="layui-icon layadmin-tabs-control layui-icon-next" layadmin-event="rightPage"></div>
@@ -186,14 +182,14 @@
     </div>
     {{# } }}
   </script>
-  
-  
-  <!-- 主体内容 -->
-  <div class="layui-body" id="LAY_app_body">
-    <div class="layadmin-tabsbody-item layui-show"></div>
-  </div>
-  
-  <!-- 辅助元素，一般用于移动设备下遮罩 -->
-  <div class="layadmin-body-shade" layadmin-event="shade"></div>
-  
+
+
+	<!-- 主体内容 -->
+	<div class="layui-body" id="LAY_app_body">
+		<div class="layadmin-tabsbody-item layui-show"></div>
+	</div>
+
+	<!-- 辅助元素，一般用于移动设备下遮罩 -->
+	<div class="layadmin-body-shade" layadmin-event="shade"></div>
+
 </div>
