--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -79,7 +79,7 @@
 	<!-- 侧边菜单 -->
 	<div class="layui-side layui-side-menu">
 		<div class="layui-side-scroll">
-			<script type="text/html" template lay-url="" lay-done="layui.element.render('nav', 'layadmin-system-side-menu');"
+			<script type="text/html" template lay-url="{{layui.setter.website_api_url}}menu" lay-done="layui.element.render('nav', 'layadmin-system-side-menu');"
 			 id="TPL_layout">
 
 			<div class="layui-logo" lay-href="">
